[package]
name = "websocket-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio-util = "0.7.17"
